--- a/IdlPayground.vcxproj
+++ b/IdlPayground.vcxproj
@@ -68,6 +68,7 @@
     <None Include="packages.config" />
     <ClInclude Include="Class.h" />
     <ClInclude Include="pch.h" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
