--- a/IdlPayground.vcxproj.filters
+++ b/IdlPayground.vcxproj.filters
@@ -23,8 +23,12 @@
     <None Include="packages.config">
       <Filter>build</Filter>
     </None>
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="Example.idl" />
+  </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="$(MSBuildThisFileDirectory)..\..\natvis\wil.natvis" />
   </ItemGroup>
 </Project>
