--- a/IdlPayground.vcxproj.filters
+++ b/IdlPayground.vcxproj.filters
@@ -20,16 +20,11 @@
     <ClInclude Include="Class.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
-      <Filter>build</Filter>
-    </None>
     <None Include="README.md" />
     <None Include="WorkInIsolationScript.md" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="Example.idl" />
-  </ItemGroup>
-  <ItemGroup>
-    <Natvis Include="$(MSBuildThisFileDirectory)..\..\natvis\wil.natvis" />
   </ItemGroup>
 </Project>
